# cleanclaw

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  install.sh
crates/cleanclaw-agent/: Cargo.toml
crates/cleanclaw-agent/src/: attachments.rs  bundled_skills.rs  compact.rs  context.rs  event_hub.rs  events.rs  goal_hook.rs  heartbeat.rs  hooks.rs  lib.rs  loop_runner.rs  manager.rs  memory.rs  sdkbridge.rs  skills_full.rs  skills_learner.rs  slash.rs  slash_goal.rs  subagent_runtime.rs  tool_recovery.rs
crates/cleanclaw-agent/src/goal/: accounting.rs  continuation.rs  id.rs  mod.rs  prompt.rs
crates/cleanclaw-agent/src/tools/: apply_patch.rs  bash_session.rs  builtins.rs  cron_tool.rs  delegate.rs  env_scrub.rs  exec.rs  file.rs  goal.rs  image_gen.rs  load_skill.rs  media.rs  memory_search.rs  mod.rs  skill_install.rs  subagent.rs  tts.rs  web.rs
crates/cleanclaw-agent/tests/: loop_integration.rs
crates/cleanclaw-agentcli/: Cargo.toml
crates/cleanclaw-agentcli/src/: lib.rs
crates/cleanclaw-api/: Cargo.toml
crates/cleanclaw-api/src/: apikey_endpoints.rs  chat.rs  chat_ws.rs  cron_endpoints.rs  lib.rs  openai_compat.rs  v1_users.rs  websocket.rs
crates/cleanclaw-api/tests/: chat_ws.rs
crates/cleanclaw-auth/: Cargo.toml
crates/cleanclaw-auth/src/: apikey.rs  identity.rs  lib.rs  password.rs  resolver.rs  rotation.rs  session.rs  users.rs
crates/cleanclaw-bus/: Cargo.toml
crates/cleanclaw-bus/src/: lib.rs
crates/cleanclaw-channels/: Cargo.toml
crates/cleanclaw-channels/src/: lib.rs  protocols.rs  webhook_bridge.rs
crates/cleanclaw-cli/: Cargo.toml
crates/cleanclaw-cli/src/: admin_cmd.rs  agents_cmd.rs  apikey_cmd.rs  daemon_cmd.rs  main.rs  plugin_cmd.rs  policy_cmd.rs  provider_cmd.rs  sandbox_cmd.rs  session_cmd.rs  skill_cmd.rs
crates/cleanclaw-core/: Cargo.toml  build.rs
crates/cleanclaw-core/src/: buildinfo.rs  error.rs  idgen.rs  ids.rs  lib.rs  time.rs
crates/cleanclaw-cron/: Cargo.toml
crates/cleanclaw-cron/src/: lib.rs
crates/cleanclaw-cron/tests/: integration.rs
crates/cleanclaw-daemon/: Cargo.toml
crates/cleanclaw-daemon/src/: lib.rs
crates/cleanclaw-e2e/: Cargo.toml
crates/cleanclaw-e2e/src/: lib.rs
crates/cleanclaw-e2e/tests/: integration.rs  provider.rs
crates/cleanclaw-gateway/: Cargo.toml
crates/cleanclaw-gateway/src/: dedup.rs  lib.rs  orchestrator.rs  userspace.rs  userspace_loader.rs
crates/cleanclaw-mcp/: Cargo.toml
crates/cleanclaw-mcp/src/: lib.rs
crates/cleanclaw-plugin/: Cargo.toml
crates/cleanclaw-plugin-bridge/: Cargo.toml
crates/cleanclaw-plugin-bridge/src/: lib.rs
crates/cleanclaw-plugin-runtime/: Cargo.toml
crates/cleanclaw-plugin-runtime/src/: lib.rs
crates/cleanclaw-plugin/src/: lib.rs
crates/cleanclaw-policy/: Cargo.toml
crates/cleanclaw-policy/src/: lib.rs
crates/cleanclaw-privacy/: Cargo.toml
crates/cleanclaw-privacy/src/: lib.rs  scanner.rs  scrub.rs
crates/cleanclaw-provider/: Cargo.toml
crates/cleanclaw-provider/src/: anthropic.rs  anthropic_xml_fallback.rs  credentials.rs  factory.rs  lib.rs  message.rs  openai.rs  provider.rs  url.rs
crates/cleanclaw-provider/tests/: basic.rs  live.rs
crates/cleanclaw-provider/tests/common/: mod.rs
crates/cleanclaw-sandbox/: Cargo.toml
crates/cleanclaw-sandbox/src/: lib.rs  remote.rs
crates/cleanclaw-scope/: Cargo.toml
crates/cleanclaw-scope/src/: lib.rs
crates/cleanclaw-session/: Cargo.toml
crates/cleanclaw-session/src/: lib.rs
crates/cleanclaw-setup/: Cargo.toml
crates/cleanclaw-setup/src/: identity_store.rs  lib.rs  server.rs
crates/cleanclaw-setup/src/handlers/: admin.rs  agents.rs  channels.rs  cron.rs  extras.rs  extras2.rs  mod.rs  plugins.rs  projects.rs  resources.rs  scoped.rs  skills.rs  tools.rs  usage.rs
crates/cleanclaw-skills/: Cargo.toml
crates/cleanclaw-skills-bundled/: Cargo.toml
crates/cleanclaw-skills-bundled/skills/cleanclaw-skill-guide/: SKILL.md
crates/cleanclaw-skills-bundled/skills/cleanclaw-skill-learner/: SKILL.md
crates/cleanclaw-skills-bundled/skills/code-runner/: SKILL.md
crates/cleanclaw-skills-bundled/skills/data-analysis/: SKILL.md
crates/cleanclaw-skills-bundled/skills/find-skills/: SKILL.md
crates/cleanclaw-skills-bundled/skills/image-gen/: SKILL.md
crates/cleanclaw-skills-bundled/skills/skill-creator/: SKILL.md
crates/cleanclaw-skills-bundled/skills/translation/: SKILL.md
crates/cleanclaw-skills-bundled/skills/web-search/: SKILL.md
crates/cleanclaw-skills-bundled/src/: lib.rs
crates/cleanclaw-skills/src/: install.rs  lib.rs  objectstore.rs  search.rs  skillssh.rs
crates/cleanclaw-store/: Cargo.toml
crates/cleanclaw-store/src/: factory.rs  fts.rs  lib.rs  migrations.rs  models.rs  postgres.rs  schema_postgres.sql  schema_sqlite.sql  sqlite.rs  store.rs
crates/cleanclaw-store/tests/: sqlite_integration.rs
crates/cleanclaw-taskqueue/: Cargo.toml
crates/cleanclaw-taskqueue/src/: lib.rs
crates/cleanclaw-toolprov/: Cargo.toml
crates/cleanclaw-toolprov/src/: extra_backends.rs  extra_backends2.rs  lib.rs
crates/cleanclaw-toolprov/src/backends/: mod.rs
crates/cleanclaw-toolprov/src/backends/extras_fetch/: firecrawl.rs  mod.rs
crates/cleanclaw-toolprov/src/backends/extras_imagegen/: fal.rs  mod.rs  replicate.rs
crates/cleanclaw-toolprov/src/backends/extras_search/: exa.rs  mod.rs  searxng.rs
crates/cleanclaw-toolprov/src/backends/extras_tts/: elevenlabs.rs  fish.rs  minimax.rs  mod.rs
crates/cleanclaw-toolprov/src/backends/imagegen/: mod.rs  none.rs  openai.rs
crates/cleanclaw-toolprov/src/backends/tts/: mod.rs  none.rs  openai.rs
crates/cleanclaw-toolprov/src/backends/webfetch/: direct.rs  (+2 more)
crates/cleanclaw-web/: Cargo.toml
crates/cleanclaw-web/src/: client.rs  css.rs  hooks.rs  html.rs  layout.rs  lib.rs  markdown.rs  scope_picker.rs  server.rs  types.rs
crates/cleanclaw-web/src/pages/: admin.rs  agent.rs  apikeys.rs  auth.rs  chat.rs  index.rs  mod.rs  overview.rs  resources.rs  settings.rs
crates/cleanclaw-web/static/: ws-chat.js
crates/cleanclaw-web/tests/: integration.rs
(+163 files in other folders)
