[package]
name = "cleanclaw-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-provider = { workspace = true }
cleanclaw-bus = { workspace = true }
cleanclaw-skills = { workspace = true }
cleanclaw-toolprov = { path = "../cleanclaw-toolprov" }
cleanclaw-session = { path = "../cleanclaw-session" }
cleanclaw-store = { workspace = true }
cleanclaw-cron = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-stream = "0.3"
tempfile = { workspace = true }
