[package]
name = "cleanclaw-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-auth = { workspace = true, features = ["axum"] }
cleanclaw-store = { workspace = true }
cleanclaw-provider = { workspace = true }
cleanclaw-agent = { workspace = true }
cleanclaw-cron = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
tower = { workspace = true }
