[package]
name = "cleanclaw-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-store = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true, optional = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
