[package]
name = "cleanclaw-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-bus = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
hmac = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
