[package]
name = "cleanclaw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
