[package]
name = "cleanclaw-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-bus = { workspace = true }
cleanclaw-store = { workspace = true }
chrono = { workspace = true }
cron = "0.12"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
