[package]
name = "cleanclaw-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cleanclaw-core = { path = "../cleanclaw-core" }
cleanclaw-config = { path = "../cleanclaw-config" }
cleanclaw-web = { path = "../cleanclaw-web" }
cleanclaw-skills-bundled = { path = "../cleanclaw-skills-bundled" }
cleanclaw-workspace-defaults = { path = "../cleanclaw-workspace-defaults" }
cleanclaw-plugin-runtime = { path = "../cleanclaw-plugin-runtime" }
cleanclaw-provider = { path = "../cleanclaw-provider" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
