[package]
name = "cleanclaw-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-config = { workspace = true }
cleanclaw-store = { path = "../cleanclaw-store" }
cleanclaw-auth = { workspace = true }
cleanclaw-provider = { workspace = true }
cleanclaw-api = { workspace = true }
cleanclaw-setup = { workspace = true }
cleanclaw-bus = { workspace = true }
cleanclaw-cron = { workspace = true }
cleanclaw-channels = { workspace = true }
cleanclaw-plugin = { workspace = true }
cleanclaw-sandbox = { workspace = true }
cleanclaw-usage = { workspace = true }
cleanclaw-webhook = { workspace = true }
cleanclaw-workspace = { workspace = true }
cleanclaw-agent = { workspace = true }
cleanclaw-daemon = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3.6"
thiserror = { workspace = true }
