[package]
name = "cleanclaw-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }
