[package]
name = "cleanclaw-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-config = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = "0.3"
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ring = "0.17"
sha2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["full"] }
