[package]
name = "cleanclaw-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-workspace = { path = "../cleanclaw-workspace" }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
