[package]
name = "cleanclaw-setup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-store = { path = "../cleanclaw-store" }
cleanclaw-config = { workspace = true }
cleanclaw-auth = { workspace = true }
cleanclaw-session = { path = "../cleanclaw-session" }
cleanclaw-bus = { workspace = true }
cleanclaw-skills = { path = "../cleanclaw-skills" }
cleanclaw-provider = { workspace = true }
cleanclaw-channels = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
include_dir = "0.7"
uuid = { workspace = true }
chrono = { workspace = true }
zip = { version = "0.6", default-features = false }
base64 = "0.22"
cleanclaw-agent = { path = "../cleanclaw-agent" }

[dev-dependencies]
tempfile = { workspace = true }
