[package]
name = "cleanclaw-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { workspace = true }
cleanclaw-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
flate2 = "1"
tar = "0.4"
thiserror = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
bytes = "1"

[dev-dependencies]
tempfile = { workspace = true }
