[package]
name = "cleanclaw-taskqueue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-bus = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
