[package]
name = "cleanclaw-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cleanclaw-core = { path = "../cleanclaw-core" }
cleanclaw-auth = { path = "../cleanclaw-auth", features = ["axum"] }
cleanclaw-config = { path = "../cleanclaw-config" }
cleanclaw-api = { path = "../cleanclaw-api" }
cleanclaw-setup = { path = "../cleanclaw-setup" }
cleanclaw-provider = { path = "../cleanclaw-provider" }
cleanclaw-channels = { path = "../cleanclaw-channels" }
cleanclaw-agent = { path = "../cleanclaw-agent" }
cleanclaw-embed = { path = "../cleanclaw-embed" }
cleanclaw-store = { path = "../cleanclaw-store" }
cleanclaw-skills = { path = "../cleanclaw-skills" }

axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tower = "0.5"
url = "2"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
